@@ -6,6 +6,7 @@ Import chartist css
 Update css for charts and legends
 Display budget and planned disbursement charts
 Update colours for charts
+Update result table
 
 
 Development Portal (2020-02-09 shi)
